src/assets/css/styles.css
/* ------------------------------------------------
    Tailwind Base
--------------------------------------------------- */

@tailwind base;
@tailwind components;

/* ------------------------------------------------
    Fonts
--------------------------------------------------- */

@font-face {
    font-family: 'Proxima Nova';
    src: url('../fonts/proxima-nova/proximanova-thin.eot');
    src: url('../fonts/proxima-nova/proximanova-thin.eot?#iefix') format('embedded-opentype'),
    url('../fonts/proxima-nova/proximanova-thin.woff') format('woff'),
    url('../fonts/proxima-nova/proximanova-thin.ttf') format('truetype'),
    url('../fonts/proxima-nova/proximanova-thin.svg') format('svg');
    font-weight: 100;
    font-style: normal;
}

@font-face {
    font-family: 'Proxima Nova';
    src: url('../fonts/proxima-nova/proximanova-light.eot');
    src: url('../fonts/proxima-nova/proximanova-light.eot?#iefix') format('embedded-opentype'),
         url('../fonts/proxima-nova/proximanova-light.woff') format('woff'),
         url('../fonts/proxima-nova/proximanova-light.ttf') format('truetype'),
         url('../fonts/proxima-nova/proximanova-light.svg') format('svg');
    font-weight: 300;
    font-style: normal;
}

@font-face {
    font-family: 'Proxima Nova';
    src: url('../fonts/proxima-nova/proximanova-regular.eot');
    src: url('../fonts/proxima-nova/proximanova-regular.eot?#iefix') format('embedded-opentype'),
    url('../fonts/proxima-nova/proximanova-regular.woff') format('woff'),
    url('../fonts/proxima-nova/proximanova-regular.ttf') format('truetype'),
    url('../fonts/proxima-nova/proximanova-regular.svg') format('svg');
    font-weight: 400;
    font-style: normal;
}

@font-face {
    font-family: 'Proxima Nova';
    src: url('../fonts/proxima-nova/proximanova-semibold.eot');
    src: url('../fonts/proxima-nova/proximanova-semibold.eot?#iefix') format('embedded-opentype'),
    url('../fonts/proxima-nova/proximanova-semibold.woff') format('woff'),
    url('../fonts/proxima-nova/proximanova-semibold.ttf') format('truetype'),
    url('../fonts/proxima-nova/proximanova-semibold.svg') format('svg');
    font-weight: 700;
    font-style: normal;
}

@font-face {
    font-family: 'Proxima Nova';
    src: url('../fonts/proxima-nova/proximanova-bold.eot');
    src: url('../fonts/proxima-nova/proximanova-bold.eot?#iefix') format('embedded-opentype'),
         url('../fonts/proxima-nova/proximanova-bold.woff') format('woff'),
         url('../fonts/proxima-nova/proximanova-bold.ttf') format('truetype'),
         url('../fonts/proxima-nova/proximanova-bold.svg') format('svg');
    font-weight: 900;
    font-style: normal;
}


/* ------------------------------------------------
    Typography
--------------------------------------------------- */

/* Headings */

.h1 { @apply text-4xl font-hairline; }
.h3 { @apply text-2xl font-hairline; }
.h4 { @apply text-xl font-medium; }

.h2,
.h2-hairline {
    @apply text-3xl
}

.h2 { @apply font-medium; }
.h2-hairline { @apply font-hairline text-gray-700 }

/* Misc */

.text-link {
    @apply text-blue-500 underline cursor-pointer;
    transition: color .125s;
}

.text-link:hover { @apply text-blue-700; }


/* ------------------------------------------------
    Utilities
--------------------------------------------------- */

.shadow-outline-red { box-shadow: 0 0 0 3px rgba(229, 71, 41, 0.5); }
.shadow-outline-green { box-shadow: 0 0 0 3px rgba(139, 198, 80, 0.5); }


/* ------------------------------------------------
    HUD
--------------------------------------------------- */

.hud { @apply bg-gray-900 rounded-lg w-full p-8 grid grid-cols-1 items-center border-2 border-gray-200 }

@media screen and (min-width: 1024px) {
    .hud { @apply grid-cols-2; }
}

.hud--stat-cards {
    @apply flex flex-row items-center border-l border-gray-800 pl-4
}


/* ------------------------------------------------
    Wells
--------------------------------------------------- */

.well { @apply bg-gray-200 border border-gray-300 p-3 rounded }
.well-light { @apply bg-gray-100 }


/* ------------------------------------------------
    Cards
--------------------------------------------------- */

.card { @apply shadow bg-white rounded-md; }
.card-sm { @apply p-1; }
.card-base { @apply p-4; }
.card-actions { @apply flex flex-row justify-end items-center mt-4 }


/* ------------------------------------------------
    Buttons
--------------------------------------------------- */

/* Default */

.btn {
    @apply text-white rounded px-3 py-2 transition duration-300 cursor-pointer border;
    -webkit-appearance: button;
}

.btn:disabled { @apply cursor-not-allowed }

.btn + .btn { @apply ml-2; }

.btn:focus  { @apply outline-none shadow-outline; }
.btn-lg     { @apply text-lg font-light px-4 py-3 }

.btn-circle {
    @apply rounded-full p-1 flex flex-col items-center justify-center;
    width: 23px;
    height: 23px;
    min-width: 23px;
    font-size: .75rem;
}

/* Standard Buttons */

.btn-blue                            { @apply bg-blue-500 border-blue-600; }
.btn-blue:disabled                   { @apply bg-blue-400 border-blue-500; }
.btn-blue:hover:not(:disabled)       { @apply bg-blue-600; }
.btn-blue:active:not(:disabled)      { @apply bg-blue-600; }

.btn-gray                            { @apply bg-gray-500 border-gray-600; }
.btn-gray:disabled                   { @apply bg-gray-400 border-gray-500; }
.btn-gray:hover:not(:disabled)       { @apply bg-gray-600; }
.btn-gray:active:not(:disabled)      { @apply bg-gray-600; }

.btn-green                           { @apply bg-green-500 border-green-600; }
.btn-green:disabled                  { @apply bg-green-400 border-green-500; }
.btn-green:hover:not(:disabled)      { @apply bg-green-600; }
.btn-green:active:not(:disabled)     { @apply bg-green-600; }

.btn-indigo                          { @apply bg-indigo-500 border-indigo-600; }
.btn-indigo:disabled                 { @apply bg-indigo-400 border-indigo-500; }
.btn-indigo:hover:not(:disabled)     { @apply bg-indigo-600; }
.btn-indigo:active:not(:disabled)    { @apply bg-indigo-600; }

.btn-orange                          { @apply bg-orange-500 border-orange-600; }
.btn-orange:disabled                 { @apply bg-orange-400 border-orange-500; }
.btn-orange:hover:not(:disabled)     { @apply bg-orange-600; }
.btn-orange:active:not(:disabled)    { @apply bg-orange-600; }

.btn-red                             { @apply bg-red-500 border-red-600; }
.btn-red:disabled                    { @apply bg-red-400 border-red-500; }
.btn-red:hover:not(:disabled)        { @apply bg-red-600; }
.btn-red:active:not(:disabled)       { @apply bg-red-600; }

.btn-turquoise                       { @apply bg-turquoise-500 border-turquoise-600; }
.btn-turquoise:disabled              { @apply bg-turquoise-400 border-turquoise-500; }
.btn-turquoise:hover:not(:disabled)  { @apply bg-turquoise-600; }
.btn-turquoise:active:not(:disabled) { @apply bg-turquoise-600; }

.btn-yellow                          { @apply bg-yellow-500 border-yellow-600; }
.btn-yellow:disabled                 { @apply bg-yellow-400 border-yellow-500; }
.btn-yellow:hover:not(:disabled)     { @apply bg-yellow-600; }
.btn-yellow:active:not(:disabled)    { @apply bg-yellow-600; }


/* Hollow Buttons */

.btn-hollow-default        { @apply text-gray-800; }
.btn-hollow-default:hover  { @apply bg-gray-100; }
.btn-hollow-default:active { @apply bg-gray-100; }

.btn-hollow-blue           { @apply text-blue-400 border-blue-300; }
.btn-hollow-blue:hover     { @apply text-white bg-blue-500 border-blue-500; }
.btn-hollow-blue:active    { @apply bg-blue-500 border-blue-500; }

.btn-hollow-green          { @apply text-green-400 border-green-300; }
.btn-hollow-green:hover    { @apply text-white bg-green-500 border-green-500; }
.btn-hollow-green:active   { @apply bg-green-500 border-green-500; }

.btn-hollow-red            { @apply text-red-400 border-red-300; }
.btn-hollow-red:hover      { @apply text-white bg-red-500 border-red-500; }
.btn-hollow-red:active     { @apply bg-red-500 border-red-500; }


/* Subtle Buttons */

.btn-subtle-red            { @apply bg-red-100 text-red-400 border-red-200; }
.btn-subtle-red:hover,
.btn-subtle-red:active     { @apply bg-red-200 text-red-400; }


/* ------------------------------------------------
    Tables
--------------------------------------------------- */
.table {
    @apply border-separate w-full;
    border-spacing: 0 2px;
}

.table > .tbody:before {
    content: '';
    display: block;
    @apply h-1
}

.td, .th { @apply font-normal px-3 py-2 }

.th { @apply text-left text-white bg-gray-900 }
.th + .th { @apply border-l-2 border-gray-800 }
.th:first-child { @apply rounded-l }
.th:last-child { @apply rounded-r }

.td + .td { @apply border-l-2 border-white }
.td { @apply bg-gray-100 }
.tr:first-child td:first-child { @apply rounded-tl }
.tr:first-child td:last-child { @apply rounded-tr }
.tr:last-child td:first-child { @apply rounded-bl }
.tr:last-child td:last-child { @apply rounded-br }


/* ------------------------------------------------
    App Tab
--------------------------------------------------- */

.app-tab { @apply text-white bg-gray-800 rounded-l-md px-3 py-2 mb-2 w-full transition duration-300; }
.app-tab:hover { @apply bg-gray-700; }


/* ------------------------------------------------
    Vue Draggable Classes
--------------------------------------------------- */

.sortable-drag,
.sortable-chosen {
    @apply shadow-xl;
    cursor: grabbing;
}

.sortable-ghost {
    @apply border-2 border-gray-500 border-dashed opacity-25
}

/* ------------------------------------------------
    Form Fields
--------------------------------------------------- */

.select-field { @apply appearance-none; }
.select-field-wrap { @apply relative w-64 }

.base-field {
    @apply block w-64 bg-white border border-gray-400 px-3 py-2 rounded shadow leading-tight;
    height: 38px;
}
.field-sm { @apply w-20 }

.base-field:hover:not(:disabled) { @apply border-gray-500 }
.base-field:focus { @apply outline-none shadow-outline }
.base-field:disabled { @apply cursor-not-allowed bg-gray-100 }

/* Groups */
.field-group { @apply my-2 }
.field-group { @apply block }

/* Horizontal Forms */
.form-horizontal .field-group { @apply my-3 flex flex-row }
.form-horizontal .field-label { @apply mt-1 w-32 text-right pr-3 }

/* Inline Fields */
.fields-inline { @apply flex flex-row items-end flex-wrap }
.fields-inline .field-group { @apply m-1 }

.fields-inline-heading { @apply mb-1 flex flex-row; }
.fields-inline-heading-item { @apply mx-1 font-bold; }

/* Draggable Fields */
.field-draggable { @apply relative }
.field-draggable:after {
    content: '';
    @apply absolute top-0 right-0 bottom-0 left-0;
}
.field-draggable,
.field-draggable input,
.field-draggable input:disabled {
    @apply bg-white;
    cursor: grab;
}

/* Errors */
.is-invalid .base-field { @apply border-red-500 }
.is-invalid .base-field:hover { @apply border-red-600 }
.is-invalid .base-field:focus { @apply shadow-outline-red }
.is-valid .base-field:focus { @apply shadow-outline-green border-green-500 }

.is-required .field-label::after {
    content: ' *';
    @apply text-red-500;
}

.field-error { @apply text-red-500 mt-1 block }

/* Field Error Inside Field */
.field-error-inside { @apply relative }
.field-error-inside .field-error { @apply absolute top-0 bottom-0 right-0 m-1 p-1 }


/* ------------------------------------------------
    Tailwind Utilities
--------------------------------------------------- */

@tailwind utilities;

